# pyignite-migrate

./: .gitignore  README.md  RELEASING.md  docker-compose.yml  pyproject.toml
.github/workflows/: publish-pypi.yml
pyignite_migrate/: cli.py  config.py  errors.py  migration.py  operations.py  revision.py  script.py
pyignite_migrate/templates/: env.py.mako  pyignite_migrate.ini.mako  script.py.mako
tests/: conftest.py  test_cli.py  test_config.py  test_migration.py  test_operations.py  test_revision.py  test_script.py
