[project]
name = "pyignite-migrate"
description = "Database migration tool for Apache Ignite"
dynamic = ["version"]
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "Ivan Yurin"},
]
keywords = [
    "apache ignite",
    "database migrations",
    "ignite",
    "schema migrations",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pyignite>=0.6.0",
    "click>=8.0",
    "mako>=1.2",
]

[project.urls]
Homepage = "https://github.com/ivan-yurin/pyignite-migrate"
Repository = "https://github.com/ivan-yurin/pyignite-migrate"
Issues = "https://github.com/ivan-yurin/pyignite-migrate/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
    "coverage>=7.0",
]

[project.scripts]
pyignite-migrate = "pyignite_migrate.cli:cli"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
    "coverage>=7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "pyignite_migrate/__init__.py"

[tool.hatch.build.targets.sdist]
exclude = [
    "/tests",
    "/uv.lock",
    "/.python-version",
]

[tool.hatch.build.targets.wheel]
packages = ["pyignite_migrate"]
